--- a/index.html
+++ b/index.html
@@ -57,12 +57,10 @@
         </aside>
     </aside>
     
-    <div class="footer">
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </div>
+        <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
+    </footer>
 </body>
 
 </html>
